# demos

./: .easignore  .gitignore  DemosNitro.podspec  README.md  app.config.ts  metro.config.js  nitro.json  package.json
plugins/: with-nitro-autolinking.js  with-skia-webgpu-fix.js
plugins/nitro-android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp
plugins/nitro-android/src/main/: AndroidManifest.xml
plugins/nitro-android/src/main/kotlin/com/margelo/nitro/demos/: DemosNitroInitProvider.kt
scripts/: download-mosaic-photos.ts  generate-compact-manifest.ts  generate-sprite-atlas.ts  patch-skia-webgpu-android.js
src/animations/: registry.ts
src/animations/art-gallery/: README.md  constants.ts  index.tsx  paintings.ts  state.ts  types.ts
src/animations/art-gallery/assets/: atlas-info.json  photos-compact.d.ts  photos-compact.json  photos-manifest.json
src/animations/art-gallery/components/: zoom-out-button.tsx
src/animations/art-gallery/hooks/: use-mosaic-mapping.ts  use-painting-analysis.ts  use-photo-atlas.ts  use-webgpu-mosaic.ts
src/animations/art-gallery/shaders/: background-shader.ts  index.ts  mosaic-fragment.ts  mosaic-vertex.ts
src/animations/art-gallery/utils/: color-conversion.ts
src/animations/github-terrain/: constants.ts  contribution-data.ts  index.tsx
src/animations/github-terrain/hooks/: use-webgpu-renderer.ts
src/animations/github-terrain/shaders/: fragment.ts  index.ts  vertex.ts
src/native/ColorMatcher/: ColorMatcher.nitro.ts  HybridColorMatcher.cpp  HybridColorMatcher.hpp  index.ts
src/stubs/: webgpu-view-stub.js
(+4 files in other folders)
